--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
         env:
           GH_TOKEN: db76084835cd2c12c264b27bf8b2cf662955d991
           GIST_ID: fcdb9ffa2851040cd6354100dde547db
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          WAKATIME_API_KEY: 67e458bc-d4d9-4f7e-ab6c-23b9c4daf857
